--- a/_pages/people.html
+++ b/_pages/people.html
@@ -7,6 +7,6 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.people reversed %}
+{% for post in site.people %}
   {% include archive-single.html %}
 {% endfor %}
