--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,6 +4,20 @@ title: "People"
 permalink: /people/
 author_profile: true
 ---
+<h2>Wang Xingqi</h2>
+   <img  src="IMG_20210712_184706.jpg" width="258" height="39" />
+   <p style='font-weight:bold;'>Postdoctoral researcher</p>
+    <div class='people-image-container'>
+  <div class='people-description'>
+      <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
+<h2>Sheng Shuxuan</h2>
+    <p style='font-weight:bold;'>Graduate student</p>
+    <div class='people-image-container'>
+ <p>I am interested in how people learn complex causal relationships,ice cream.</p>  
+    <h2>Sheng Shuxuan</h2>
+    <p style='font-weight:bold;'>Graduate student</p>
+    <div class='people-image-container'>
+ <p>I am interested in how people learn complex causal relationships,ice cream.</p>   
 
 {% include base_path %}
 
