--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,7 +5,7 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
-   <img  src="IMG_20210712_184706.jpg" width="258" height="39" />
+   <img  src="Gaojiulong.jpg" width="258" height="39" />
    <p style='font-weight:bold;'>Postdoctoral researcher</p>
     <div class='people-image-container'>
   <div class='people-description'>
