--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,10 +5,7 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
-   <img  src="Gaojiulong.jpg" width="258" height="390" />
-   <p style='font-weight:bold;'>Postdoctoral researcher</p>
-    <div class='people-image-container'>
-  <div class='people-description'>
+![image](https://github.com/CJiang01/cjiang01.github.io/blob/master/_pages/Gaojiulong.jpg)   
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
 <h2>Sheng Shuxuan</h2>
     <p style='font-weight:bold;'>Graduate student</p>
