--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,8 +5,7 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
-<p>
-<img src="https://github.com/CJiang01/cjiang01.github.io/blob/master/_pages/Gaojiulong.jpg" width="320" height="320" ></p>
+![image]()
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
 <h2>Sheng Shuxuan</h2>
