--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,7 +5,7 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
-![image]()
+![image](https://github.com/CJiang01/cjiang01.github.io/blob/master/images/222.png)
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
 <h2>Sheng Shuxuan</h2>
