--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,7 +5,7 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
- <img class='people-image' src="img/members/tobias_gerstenberg.jpg" alt="Drawing" />
+<img style="width:96%;" src="images/GhostNet.png"> 
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
 <h2>Sheng Shuxuan</h2>
