--- a/_pages/people.html
+++ b/_pages/people.html
@@ -5,7 +5,9 @@ permalink: /people/
 author_profile: true
 ---
 <h2>Wang Xingqi</h2>
-<img style="width:96%;" src="images/222.png"> 
+<p>
+<img src="images/222.png">
+</p>
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
 <h2>Sheng Shuxuan</h2>
