--- a/_pages/people.html
+++ b/_pages/people.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 <h2>Wang Xingqi</h2>
 <p>
-<img src="images/222.png">
+<img src="images/222.png" alt="apple"/>
 </p>
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
