--- a/_pages/people.html
+++ b/_pages/people.html
@@ -6,7 +6,8 @@ author_profile: true
 ---
 <h2>Wang Xingqi</h2>
 <p>
-<img src="pages/Gaojiulong.jpg" alt="apple"/>
+<a href ="https://github.com/CJiang01/cjiang01.github.io/edit/master/">
+      <img src="_pages/Gaojiulong.jpg" alt="apple"/>
 </p>
 
       <p>I am interested in how people learn complex causal relationships,ice cream.</p>     
